tests/ui/typech/trait_signature_mismatch_type_param.lm
trait Foo {
    fn foo<T>();
}

use Foo in Int32 {
    fn foo() { }
}
